Generalize z-indices, fix search z-index

--- a/angular/core/css/0_mixins.scss
+++ b/angular/core/css/0_mixins.scss
@@ -7,6 +7,13 @@ $small-max-px:  $small-max  + px;
 $medium-max-px: $medium-max + px;
 $max-container-size: 1120px;
 
+$z-negative: -10;
+$z-zero: 0;
+$z-low: 10;
+$z-medium: 100;
+$z-high: 1000;
+$z-extreme: 10000;
+
 @mixin card{
   @include md-body-1;
   @include cardNoPadding;
