--- a/angular/core/css/1_lmo_md.scss
+++ b/angular/core/css/1_lmo_md.scss
@@ -41,6 +41,7 @@ md-menu-content[role="menu"] { max-height: inherit; }
 
 md-virtual-repeat-container {
   min-width: $tiny-max-px !important;
+  z-index: $z-high !important;
 }
 
 md-progress-circular { margin: auto; }
@@ -67,10 +68,17 @@ md-input-container textarea {
     max-height: 90%;
     width: 100%;
     overflow-y: auto;
+    z-index: $z-medium;
     .md-button { text-align: center; }
+  }
+  md-virtual-repeat-container {
+    left: 0 !important;
+    top: 48px !important;
+    max-width: 100%;
+    width: 100%;
   }
 }
 
 @media (min-width: $tiny-max-px) {
-  .md-open-menu-container { z-index: 1001; }
+  .md-open-menu-container { z-index: $z-high; }
 }
